--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
+    "test": "vitest",
     "build": "rollup -c",
     "generate-parser": "antlr4ng -Dlanguage=TypeScript -visitor -o src/parser src/Rust.g4"
   },
@@ -32,6 +33,8 @@
     "conductor": "https://github.com/source-academy/conductor.git#0.2.1",
     "rollup": "^4.34.1",
     "tslib": "^2.8.1",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vite": "^6.2.6",
+    "vitest": "^3.1.1"
   }
 }
